# dictionary-app

./: .gitignore  CMakeLists.txt  README.md
db/: game_history.txt  get  get.c  history.txt  note.bt  question.bt
include/: extend_controller.h  filter_controller.h  main_controller.h  note_controller.h  question_controller.h  utils.h
src/: #dict-app.glade#  colors.css  dict-app.glade  dict-app.glade~  dict.c  extend_controller.c  filter_controller.c  init.c  main_controller.c  note_controller.c  question_controller.c  styles.css  utils.c
src/init/: init.c
ui/: #dict-app.glade#  dict-app.glade  dict-app.glade~  styles.css
